# pcloud_utils

./: CMakeLists.txt  background.cpp  background.h  files.cpp  files.h  frames.cpp  frames.h  main.cpp  pclouds.cpp  pclouds.h  segm.cpp  segm.h
detect_person/: anomaly.py  bound.py  clf.py  cnn.py  data.py  dataset.py  detect.py  foreground.py  frames.py  gui.py  gui_exp.py  img_segm.py  preproc.py  reg.py  tools.py
tools/: get_depth.py  get_rep.py  pair_data.py
